Finalize docs
Signed-off-by: Niklas Gerstner <12609161+Krymonota@users.noreply.github.com>