@@ -15,6 +15,9 @@ If `HYTALE_AUTO_DOWNLOAD=true` and `Assets.zip` / `HytaleServer.jar` are missing
 - extract `Assets.zip` to `/data/Assets.zip`
 - extract `Server/` contents to `/data/server/`
 
+When `HYTALE_AUTO_DOWNLOAD=true`, the container will also check for updates on each start by default.
+You can disable this and only download when files are missing by setting `HYTALE_AUTO_UPDATE=false`.
+
 Credentials are stored as:
 
 - `/data/.hytale-downloader-credentials.json`
@@ -49,10 +52,11 @@ On arm64 hosts (for example Apple Silicon), you can also run the container as `l
 | `HYTALE_SERVER_SESSION_TOKEN` | *(empty)* | Passed as `--session-token` (**secret**). |
 | `HYTALE_SERVER_IDENTITY_TOKEN` | *(empty)* | Passed as `--identity-token` (**secret**). |
 | `HYTALE_AUTO_DOWNLOAD` | `false` | If `true`, downloads server files and `Assets.zip` via the official Hytale Downloader when missing. |
+| `HYTALE_AUTO_UPDATE` | `true` | If `true`, runs the downloader on each start when `HYTALE_AUTO_DOWNLOAD=true` (checks for updates even when files already exist). |
 | `HYTALE_DOWNLOADER_URL` | `https://downloader.hytale.com/hytale-downloader.zip` | Official downloader URL (must start with `https://downloader.hytale.com/`). |
 | `HYTALE_DOWNLOADER_DIR` | `/data/.hytale-downloader` | Directory where the image stores the downloader binary. |
 | `HYTALE_DOWNLOADER_PATCHLINE` | *(empty)* | Optional downloader patchline (e.g. `pre-release`). |
-| `HYTALE_DOWNLOADER_SKIP_UPDATE_CHECK` | `true` | If `true`, passes `-skip-update-check` to reduce network/variability during automation. |
+| `HYTALE_DOWNLOADER_SKIP_UPDATE_CHECK` | `false` | If `true`, passes `-skip-update-check` to reduce network/variability during automation. |
 | `HYTALE_DOWNLOADER_CREDENTIALS_SRC` | *(empty)* | Optional path to a mounted credentials file to seed `/data/.hytale-downloader-credentials.json`. |
 | `HYTALE_GAME_ZIP_PATH` | `/data/game.zip` | Where the downloader stores the downloaded game package zip. |
 | `HYTALE_KEEP_GAME_ZIP` | `false` | If `true`, keep the downloaded game zip after extraction. |
@@ -60,8 +64,32 @@ On arm64 hosts (for example Apple Silicon), you can also run the container as `l
 | `JVM_XMS` | *(empty)* | Passed as `-Xms...` (initial heap). |
 | `JVM_XMX` | *(empty)* | Passed as `-Xmx...` (max heap). |
 | `JVM_EXTRA_ARGS` | *(empty)* | Extra JVM args appended to the `java` command. |
-| `ENABLE_AOT` | `auto` | `auto\|true\|false` (controls `-XX:AOTCache=...`). |
+| `ENABLE_AOT` | `auto` | `auto\|true\|false\|generate` (controls `-XX:AOTCache=...`). |
 | `EXTRA_SERVER_ARGS` | *(empty)* | Extra server args appended at the end. |
+| `HYTALE_ALLOW_OP` | `false` | If `true`, passes `--allow-op`. |
+| `HYTALE_BACKUP_MAX_COUNT` | *(empty)* | Passed as `--backup-max-count`. |
+| `HYTALE_BARE` | `false` | If `true`, passes `--bare`. |
+| `HYTALE_BOOT_COMMAND` | *(empty)* | Passed as `--boot-command`. |
+| `HYTALE_DISABLE_ASSET_COMPARE` | `false` | If `true`, passes `--disable-asset-compare`. |
+| `HYTALE_DISABLE_CPB_BUILD` | `false` | If `true`, passes `--disable-cpb-build`. |
+| `HYTALE_DISABLE_FILE_WATCHER` | `false` | If `true`, passes `--disable-file-watcher`. |
+| `HYTALE_EARLY_PLUGINS_PATH` | *(empty)* | Passed as `--early-plugins`. |
+| `HYTALE_EVENT_DEBUG` | `false` | If `true`, passes `--event-debug`. |
+| `HYTALE_FORCE_NETWORK_FLUSH` | *(empty)* | Passed as `--force-network-flush`. |
+| `HYTALE_GENERATE_SCHEMA` | `false` | If `true`, passes `--generate-schema`. |
+| `HYTALE_LOG` | *(empty)* | Passed as `--log`. |
+| `HYTALE_MODS_PATH` | *(empty)* | Passed as `--mods`. |
+| `HYTALE_OWNER_NAME` | *(empty)* | Passed as `--owner-name`. |
+| `HYTALE_OWNER_UUID` | *(empty)* | Passed as `--owner-uuid`. |
+| `HYTALE_PREFAB_CACHE_PATH` | *(empty)* | Passed as `--prefab-cache`. |
+| `HYTALE_SHUTDOWN_AFTER_VALIDATE` | `false` | If `true`, passes `--shutdown-after-validate`. |
+| `HYTALE_SINGLEPLAYER` | `false` | If `true`, passes `--singleplayer`. |
+| `HYTALE_TRANSPORT` | *(empty)* | Passed as `--transport`. |
+| `HYTALE_UNIVERSE_PATH` | *(empty)* | Passed as `--universe`. |
+| `HYTALE_VALIDATE_ASSETS` | `false` | If `true`, passes `--validate-assets`. |
+| `HYTALE_VALIDATE_PREFABS` | *(empty)* | If set to `true`, passes `--validate-prefabs`. Otherwise passes `--validate-prefabs <value>`. |
+| `HYTALE_VALIDATE_WORLD_GEN` | `false` | If `true`, passes `--validate-world-gen`. |
+| `HYTALE_WORLD_GEN_PATH` | *(empty)* | Passed as `--world-gen`. |
 
 ## Examples
 
@@ -98,6 +126,15 @@ services:
 
 ### JVM heap tuning
 
+If `JVM_XMS` / `JVM_XMX` are not set, the JVM will pick defaults (based on available container memory).
+This is usually fine for testing, but for predictable production operation you should set at least `JVM_XMX` to an explicit limit.
+There are no universal best-practice values; monitor RAM/CPU usage for your player count and playstyle and experiment with different values.
+If you see high CPU usage from garbage collection, that can be a symptom of memory pressure and an `JVM_XMX` value that is too low.
+In that case, try increasing `JVM_XMX` (or reducing view distance / workload) and compare behavior.
+
+You can optionally set `JVM_XMS` as well. Keeping `JVM_XMS` lower than `JVM_XMX` allows the heap to grow as needed.
+Setting `JVM_XMS` equal to `JVM_XMX` can reduce heap resizing overhead but increases baseline memory usage.
+
 ```yaml
 services:
   hytale:
@@ -108,8 +145,26 @@ services:
 
 ### AOT cache
 
-- `ENABLE_AOT=auto`: enables AOT only when the cache file exists.
+Hytale ships with a pre-trained AOT cache (`HytaleServer.aot`), but AOT caches require a compatible Java runtime.
+If you see AOT cache errors during startup, generate a cache that matches the Java version/build inside the container.
+
+AOT caches are also architecture-specific (e.g. `linux/amd64` vs `linux/arm64`).
+If you switch the container platform (or move the `/data` volume between machines), delete and regenerate the cache.
+If the cache is incompatible (for example shipped for a different architecture), `ENABLE_AOT=auto` should ignore it and continue startup.
+For strict diagnostics, use `ENABLE_AOT=true` (fails fast). For normal operation, prefer `ENABLE_AOT=auto`.
+
+- `ENABLE_AOT=auto` (default): enables AOT only when the cache file exists.
 - `ENABLE_AOT=true`: requires the cache file to exist and fails fast otherwise.
+- `ENABLE_AOT=false`: do not use AOT.
+- `ENABLE_AOT=generate`: generates an AOT cache at `HYTALE_AOT_PATH`, then exits.
+
+If you see Java warnings about restricted native access (e.g. Netty), you can set:
+
+- `JVM_EXTRA_ARGS=--enable-native-access=ALL-UNNAMED`
+
+If you see a stacktrace about failing to read a hardware UUID during Sentry init, you can set:
+
+- `HYTALE_DISABLE_SENTRY=true`
 
 ### Non-interactive auto-download (seed credentials)
 
